fixed HR page hero image not loading on mobile devices

--- a/css/mobile-hero-style.css
+++ b/css/mobile-hero-style.css
@@ -20,6 +20,9 @@
   #hero-id-energy {
     background-image: url("../images/solar-ed-hero.jpg");
   }
+  #hero-id-hr {
+    background-image: url("../images/human-resources-hero.jpg");
+  }
 
   .hero-overlay {
   	background-color: black;
